src/style.css
* {
  margin: 0px;
  border: 0px;
  box-sizing: border-box;
}

body {
  height: 100dvh;
  background-color: black;
  display: grid;
}

#content {
  display: grid;
  grid-template-columns: 2fr 15% 2fr;
  gap: 25px;
  padding: 25px;
  align-items: center;
}

.shipTable {
  display: grid;
  grid-template-columns: 1fr 2rem;
  justify-items: center;
  border-radius: 10px;
  background-color: rgb(50, 50, 50);
}

.shipTableTitle {
  font-weight: 900;
}

.shipTableCurrent.ti {
  box-shadow: 0 0 10px 2px greenyellow;
  z-index: 2;
}

.ti {
  color: white;
  width: 100%;
  text-align: center;
  padding: 5px;
  font-weight: 100;
}

.gameBoard {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(10, 1fr);
  aspect-ratio: 1;
  padding: 10px;
}

.controls {
}

.active {
  border: 1px solid greenyellow;
}

.gridCell.valid {
  box-shadow: 0 0 10px 2px greenyellow;
  border: 1px solid greenyellow;
  z-index: 3;
}


.gridCell.invalid {
  box-shadow: 0 0 10px 2px red;
  border: 1px solid red;
  z-index: 3;
}

.gridCell {
  border: 1px solid grey;
}inherit

.active>.gridCell:hover {
  transition: all 0.2s;
  cursor: pointer;
}

div.hit {
  background-color: green;
}

.miss {
  background-color: red;
}

.ship {
  background-color: gray;
}

